[update] remove search bar

--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -54,13 +54,13 @@
         <button class="button" type="Search">Go</button>
         </form>
         </div> -->
-        <div class="search">
+        <!-- <div class="search">
           <form action="https://google.com/search" method="get">
           <input type="hidden" name="sitesearch" value="smo-wiki.leibniz-hbi.de" />
           <input type="text" name="q" />
           <button class="button" type="Search">Go</button>
           </form>
-        <div class="search">
+        <div class="search"> -->
 
         <h3><a href="#menu">Navigation</a></h3>
       </header>
