--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -118,7 +118,7 @@ blockquote {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    height: 5%;
+    height: 42pt;
   }
   
   &.active {
