--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -39,13 +39,14 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        {% if site.show_downloads %}
         <ul class="downloads">
+          <li><a href="https://github.com/Leibniz-HBI/socrates/blob/main/index.pdf">Download <strong>PDF File</strong></a></li>
+          {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          {% endif %}
         </ul>
-        {% endif %}
 <!--        <div class="search">
         <form method="get" id="search" action="https://duckduckgo.com/">
         <input type="hidden" name="sites" value="smo-wiki.leibniz-hbi.de directly"/>
