--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -41,10 +41,10 @@
 
         <ul class="downloads">
           <li><a href="https://github.com/Leibniz-HBI/socrates/blob/main/index.pdf">Download <strong>PDF File</strong></a></li>
+          <li><a href="https://github.com/Leibniz-HBI/socrates/blob/main/index.md">View On <strong>GitHub</strong></a></li>
           {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           {% endif %}
         </ul>
 <!--        <div class="search">
