[add] support for affiliation and affiliation

--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -76,6 +76,13 @@
               </li>
             {% endfor %}
           </ul>
+          <ul class="institutes">
+            {% for institute in page.institutes %}
+              <li>
+                {{ institute }}
+              </li>
+            {% endfor %}
+          </ul>
         </div>
         <p class="abstract">
           <strong>Abstract</strong>
