[fix] institutes, not institute

--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -77,7 +77,7 @@
             {% endfor %}
           </ul>
           <ul class="institutes">
-            {% for institute in page.institutes %}
+            {% for institute in page.institute %}
               <li>
                 {{ institute }}
               </li>
