--- a/_layouts/onepager.html
+++ b/_layouts/onepager.html
@@ -109,6 +109,10 @@
           <img src="assets/img/Logo-bunt-quer-transp_e.png" width="270px"></a></br>
           <a href="https://fgz-risc.de">
           <img src="assets/img/FGZ-Logo-Teilinstitut-RGB-EN.png" width="250px"></a>
+          <img src="assets/img/FGZ-Logo-Teilinstitut-RGB-EN.png" width="230px" style="
+            margin-bottom: 20px;
+            margin-top: 20px;
+          ">
           <a href="https://www.bmbf.de/en/index.html">
           <img src="assets/img/BMBF_sponsored_EN.png" width="245px"></a>
         </div></br>
